--- a/frontend/survey.html
+++ b/frontend/survey.html
@@ -20,6 +20,10 @@
 					</ul>
 				</nav>
 			</div>
+			<div class='sk-ww-instagram-hashtag-feed' data-embed-id='15620'>
+			</div>
+			<script src='https://www.sociablekit.com/app/embed/instagram-hashtag-feed/widget.js'>
+			</script>
 		</header>
 
         <section id="showcase">
