--- a/frontend/Central Park Data/survey.html
+++ b/frontend/Central Park Data/survey.html
@@ -21,7 +21,7 @@
 				</nav>
 			</div>
 		</header>
-        
+        <br>
         <section id="showcase">
             <div class="surveyContainer">
                 <form method = "post">
@@ -41,12 +41,14 @@
 
                         <p>3. Activities (Select all that apply): <br>
                             <input type="Checkbox" Name="Activity" Value ="Leisure" name= "answer3">Leisure<br>
-                            <input type="Checkbox" Name="Activity" Value ="Running" name= "answer3">Running<br>
+                            <input type="Checkbox" Name="Activity" Value ="Exercise" name= "answer3">Exercise<br>
                             <input type="Checkbox" Name="Activity" Value ="Walking Dog" name= "answer3">Walking Dog<br>
                             <input type="Checkbox" Name="Activity" Value ="Attractions" name= "answer3">Attractions<br>
+                            <input type="Checkbox" Name="Activity" Value ="Reading" name= "answer3">Reading<br>
+                            <input type="Checkbox" Name="Activity" Value ="Eating" name= "answer3">Eating<br>                            
                         </p>
-
-                        <p> <input type="submit" value="Submit the Survey"></p>
+                        
+                        <button class = "surveyButton" input type="submit" value="Submit the Survey"><p>Submit Response</p></button>
                     <br>
                     <br>
                 </form>
