--- a/frontend/Central Park Data/survey.html
+++ b/frontend/Central Park Data/survey.html
@@ -40,12 +40,12 @@
                         </p>
 
                         <p>3. Activities (Select all that apply): <br>
-                            <input type="Checkbox" Name="Activity" Value ="Leisure" name= "answer3">Leisure<br>
-                            <input type="Checkbox" Name="Activity" Value ="Exercise" name= "answer3">Exercise<br>
-                            <input type="Checkbox" Name="Activity" Value ="Walking Dog" name= "answer3">Walking Dog<br>
-                            <input type="Checkbox" Name="Activity" Value ="Attractions" name= "answer3">Attractions<br>
-                            <input type="Checkbox" Name="Activity" Value ="Reading" name= "answer3">Reading<br>
-                            <input type="Checkbox" Name="Activity" Value ="Eating" name= "answer3">Eating<br>                            
+                            <input type="Checkbox" Value ="Leisure" name= "answer3">Leisure<br>
+                            <input type="Checkbox" Value ="Exercise" name= "answer3">Exercise<br>
+                            <input type="Checkbox" Value ="Walking Dog" name= "answer3">Walking Dog<br>
+                            <input type="Checkbox" Value ="Attractions" name= "answer3">Attractions<br>
+                            <input type="Checkbox" Value ="Reading" name= "answer3">Reading<br>
+                            <input type="Checkbox" Value ="Eating" name= "answer3">Eating<br>                            
                         </p>
                         
                         <button class = "surveyButton" input type="submit" value="Submit the Survey"><p>Submit Response</p></button>
