Update frontend/Central Park Data/survey.html
changed from select all to choose the best option

--- a/frontend/Central Park Data/survey.html
+++ b/frontend/Central Park Data/survey.html
@@ -39,7 +39,7 @@
                             <input type="radio" value="no" name= "answer2">No<br>
                         </p>
 
-                        <p>3. Activities (Select all that apply): <br>
+                        <p>3. Activities (Choose the best selection): <br>
                             <input type="radio" Value ="Leisure" name= "answer3">Leisure<br>
                             <input type="radio" Value ="Exercise" name= "answer3">Exercise<br>
                             <input type="radio" Value ="Walking Dog" name= "answer3">Walking Dog<br>
