--- a/frontend/Central Park Data/survey.html
+++ b/frontend/Central Park Data/survey.html
@@ -14,7 +14,7 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="index.html">Image Filter</a></li>
+						<li><a href="http://www.centralparknyc.org">Main Page</a></li>
                         <li><a href="index.html">Our Visitors</a></li>
                         <li><a href="index.html">Sweepstakes</a></li>
 					</ul>
