Update frontend/Central Park Data/survey.html
updated names for database

--- a/frontend/Central Park Data/survey.html
+++ b/frontend/Central Park Data/survey.html
@@ -27,25 +27,25 @@
                 <form method = "post">
                     <h1><b>Central Park Visit Survey</b></h1>
                         <p>1. Age Range: <br>
-                            <input type="radio" value="18 - 29" name= "answer1">18 - 24<br>
-                            <input type="radio" value="30 - 39" name= "answer1">30 - 39<br>
-                            <input type="radio" value="40 - 49" name= "answer1">40 - 49<br>
-                            <input type="radio" value="50 - 59" name= "answer1">50 - 59<br>
-                            <input type="radio" value="60+">60+<br>
+                            <input type="radio" value="18 - 29" name= "Age">18 - 24<br>
+                            <input type="radio" value="30 - 39" name= "Age">30 - 39<br>
+                            <input type="radio" value="40 - 49" name= "Age">40 - 49<br>
+                            <input type="radio" value="50 - 59" name= "Age">50 - 59<br>
+                            <input type="radio" value="60+" name = "Age">60+<br>
                         </p>
 
                         <p>2. Activities (Choose the best selection): <br>
-                            <input type="radio" Value ="Leisure" name= "answer2">Leisure<br>
-                            <input type="radio" Value ="Exercise" name= "answer2">Exercise<br>
-                            <input type="radio" Value ="Walking Dog" name= "answer2">Walking Dog<br>
-                            <input type="radio" Value ="Attractions" name= "answer2">Attractions<br>
-                            <input type="radio" Value ="Reading" name= "answer2">Reading<br>
-                            <input type="radio" Value ="Eating" name= "answer2">Eating<br>                            
+                            <input type="radio" Value ="Leisure" name= "Activity">Leisure<br>
+                            <input type="radio" Value ="Exercise" name= "Activity">Exercise<br>
+                            <input type="radio" Value ="Walking Dog" name= "Activity">Walking Dog<br>
+                            <input type="radio" Value ="Attractions" name= "Activity">Attractions<br>
+                            <input type="radio" Value ="Reading" name= "Activity2">Reading<br>
+                            <input type="radio" Value ="Eating" name= "Activity">Eating<br>                            
                         </p>
 
                         <p>3. Tourist: <br>
-                            <input type="radio" value="yes" name= "answer3">Yes<br>
-                            <input type="radio" value="no" name= "answer3">No<br>
+                            <input type="radio" value="yes" name= "Tourist">Yes<br>
+                            <input type="radio" value="no" name= "Tourist">No<br>
                         </p>
                         
                         <button class = "surveyButton" input type="submit" value="Submit the Survey"><p>Submit Response</p></button>
