Hope this works

--- a/frontend/visitordata.html
+++ b/frontend/visitordata.html
@@ -24,7 +24,11 @@
 		</header>
 
 			<section id="showcase">
+                <br>
+                <br>
+                <img src="Images/VisitorData.jpg" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left" height = 400 width = 600>
 
+                <img src="Images/VisitingData.png" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:right" height = 400 width = 600>
 			</section>
 				<section id="newsletter">
 					<div class="container">
@@ -40,7 +44,7 @@
 		</footer>
         <section id="logoArea">
         <div class = "container">
-            <a href = "https://www.centralpark.com/visitor-info/central-park-conservancy/"><img src="https://drive.google.com/file/d/1HRKoLsYnDA6PnV3gyjISXPuMJrmfofC2/view?usp=sharing" height = 60 width = 120 draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left"></a>
+            <a href = "https://www.centralpark.com/visitor-info/central-park-conservancy/"><img src="Images/CentralParkConservancyLogo.png" height = 60 width = 120 draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left"></a>
         </div>
         </section>
 	</body>
