--- a/frontend/survey.html
+++ b/frontend/survey.html
@@ -4,7 +4,7 @@
 		<meta charset = "utf-8">
 		<meta name ="viewport" content = "width=device-width">
 		<title>Central Park Visit Survey</title>
-		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<header>
@@ -16,8 +16,8 @@
 					<ul>
 						<li><a href="phototrip.html">Make Your Trip Memorable</a></li>
                         <li><a href="visitordata.html">Our Visitors</a></li>
-                        <li><a href="index.html">Sweepstakes</a></li>
-                        <li><a href="survey.html">Survey</a></li>
+						<li><a href="index.html">Sweepstakes</a></li>
+						<li><a href="survey.html">Survey</a></li>
 					</ul>
 				</nav>
 			</div>
