--- a/frontend/visitordata.html
+++ b/frontend/visitordata.html
@@ -4,7 +4,7 @@
 		<meta charset = "utf-8">
 		<meta name ="viewport" content = "width=device-width">
 		<title>Central Park Visit</title>
-		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="style.css">
         
 	</head>
 	<body>
@@ -17,7 +17,8 @@
 					<ul>
 						<li><a href="phototrip.html">Make Your Trip Memorable</a></li>
                         <li><a href="visitordata.html">Our Visitors</a></li>
-                        <li><a href="index.html">Sweepstakes</a></li>
+						<li><a href="index.html">Sweepstakes</a></li>
+						<li><a href="survey.html">Survey</a></li>
 					</ul>
 				</nav>
 			</div>
