--- a/backend/Flask app/index.html
+++ b/backend/Flask app/index.html
@@ -25,11 +25,7 @@
 		</header>
 
 			<section id="showcase">
-                <br>
-                <br>
-                <img src="https://ggwash.org/images/posts/201102-251015.jpg" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left" height = 400 width = 600>
 
-                <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/201411-w-worlds-most-visited-tourist-attractions-central-park-ny.jpg?itok=dy6qO329" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:right" height = 400 width = 600>
 			</section>
 				<section id="newsletter">
 					<div class="container">
@@ -45,7 +41,7 @@
 		</footer>
         <section id="logoArea">
         <div class = "container">
-            <a href = "https://www.centralpark.com/visitor-info/central-park-conservancy/"><img src="Images/CentralParkConservancyLogo.png" height = 60 width = 120 draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left"></a>
+            <a href = "https://www.centralpark.com/visitor-info/central-park-conservancy/"><img src="https://drive.google.com/file/d/1HRKoLsYnDA6PnV3gyjISXPuMJrmfofC2/view?usp=sharing" height = 60 width = 120 draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left"></a>
         </div>
         </section>
 	</body>
