--- a/backend/Flask app/visitordata.html
+++ b/backend/Flask app/visitordata.html
@@ -27,9 +27,9 @@
 			<section id="showcase">
                 <br>
                 <br>
-                <img src="https://ggwash.org/images/posts/201102-251015.jpg" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left" height = 400 width = 600>
+                <img src="Images/VisitorData.jpg" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:left" height = 400 width = 600>
 
-                <img src="https://cdn-image.travelandleisure.com/sites/default/files/styles/1600x1000/public/201411-w-worlds-most-visited-tourist-attractions-central-park-ny.jpg?itok=dy6qO329" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:right" height = 400 width = 600>
+                <img src="Images/VisitingData.png" draggable = "false" ondragstart = "return false;" onContextMenu="return false;" style = "float:right" height = 400 width = 600>
 			</section>
 				<section id="newsletter">
 					<div class="container">
